<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Black">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/Eslogan"
        android:textSize="10dp"
        android:layout_below="@id/Logo"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Silver"
        android:text="@string/Nombre_App"/>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_below="@id/Eslogan"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/imagen"/>

    <TextView
        android:layout_below="@id/Eslogan"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Black"
        android:text="@string/Texto_1"/>

    <TextView
        android:layout_below="@id/imagen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto_2"
        android:textColor="@color/White"/>

    <Button

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:onClick="lustrar"
        android:text="@string/Boton_1"
        android:background="@drawable/cuadrado"
        android:textColor="@color/Black"/>














</RelativeLayout>